Fix color contrast.

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 .button-primary {
   padding: 0.5em 2em;
   background-color: #494848;
+  color: white;
   font-size: 24px;
 }
 
