--- a/src/taskCard.css
+++ b/src/taskCard.css
@@ -70,6 +70,7 @@
     width: 100px;
     text-align: left;
     background-color: #494848;
+    color: white;
   }
 
   .task-card--footer {
@@ -99,7 +100,7 @@
   }
 
   .error-message {
-    color: red;
+    color: rgb(133, 8, 8);
     text-align: left;
     margin-top: 5px;
   }
